src/app/view/lead-list/lead-layout/lead-card-content/lead-card-content.component.css
.student-badge{
    color: black;
    border: 1px solid var(--appColor);
    padding: 3px;
    font-size: 10px;
    line-height: 11px;
    vertical-align: middle;
}
.lead-card-container{
    font-size: 12px;
    color: black !important;
    padding: 2px !important;
}
.mat-card:not([class*=mat-elevation-z]) {
    box-shadow: none !important;
}
.stu-close-icon,.msg-close-icon{
    vertical-align: text-top;
    color: red;
}
.msg-close-icon{
    position: absolute;
    top: -6px;
    right: 14px;
}

.top-bar{
    background-color: #484848;
    border-radius: 5px;
    color: #FFF;
    text-overflow: ellipsis !important;
    padding: 10px 0px;
    text-align: center;
}
.erp-box{
 border:1px solid #FFF;
 color:#FFF;
 padding-bottom: 3px;
 background-color: #484848;
}
.truncate-text {
    white-space: nowrap;         
    overflow: hidden;            
    text-overflow: ellipsis;    
}
.position-absol{
    position: absolute;
    top: 8px;
    left: 4px;
}
.bi-telephone,.bi-chat-left,.bi-envelope,.bi-chat-left-text{
    color: var(--appColor);
}
.border-r{
    border-right:1px solid gray;
}
.clr-person-1,.clr-person-2,.clr-person-3{
    background-color: #484848;
    color: #FFF;
    position: absolute;
    top: 13px;
    font-size: 8px;
    right: 3px;
}
.clr-person-2{
    background-color: red !important;
}
.clr-person-3{
    background-color: green !important;
}
.bi-person{
    font-size: 18px;
}
.viewAll{
    color: var(--appColor);
    cursor: pointer;
}
.bi-camera-video-fill,.bi-telephone-fill,.bi-chat-left-dots-fill,.bi-envelope-fill,
.bi-whatsapp,.bi-wechat{
    color:var(--appColor);
    font-size:14px;
}
.common-class{
    color: gray !important;
    font-size: 22px;
}
.dropdown-menu.show{
    /* width: 50vw !important;
    position: absolute !important;
    inset: unset !important;
    margin: 0px;
    right: 0 !important;
    top: -6.5rem !important; */
    font-size: 12px;
    
    /* padding: 0px; */
}
.badge{
    cursor: pointer;
}
.custom-height-set{
    height: 80%;
    overflow-y: auto !important;
    padding-bottom:30px ;
}
.p-ct{
    padding-top: 10px;
}
.go-back{
    background-color: var(--appColor);
    color:white;
}
.shadow-lg {
    box-shadow: var(--bs-box-shadow-lg) !important;
    padding: 18px;
    font-size: 12px;
}
.mat-card {
    background: none !important;
    color: rgba(0, 0, 0, 0.87);
   
}
.c-name{
    font-weight: bold;
}
.pd-c{
    padding:0.5rem 2rem !important;
}
.pd-c3{
    padding-left: 1.3rem !important;
}
.set-pointer{
    cursor: pointer;
}
.text-muted{
    font-size: 11px;
}

